Fixed Alignment
Fixed the canvas alignment.

--- a/style.css
+++ b/style.css
@@ -60,3 +60,11 @@ nav{
     display: block;
   }
 }
+#canvas {
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin:auto;
+}
